# RustyShield

./: .gitignore  .rustfmt.toml  Benchmark.Dockerfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  benchmark-docker-compose.yaml
.github/workflows/: ci.yml
benches/: benches.rs  comparison_benchmark.rs  iteration_definitions.rs
src/: lib.rs  main.rs
src/lib/: constants.rs  extension_methods.rs  fips_pub_180_1_coverage.rs  hypothesis_and_coverage_assurance.rs  mod.rs  sha1_hasher.rs  (+1 more)
tests/: NIST_TESTS.md  cavs_long_msg.rs  nist_long_msg_tests.rs  sha1_nist_long_msg_tests.rs  sha224_nist_long_msg_tests.rs  sha256_nist_long_msg_tests.rs  sha384_nist_long_msg_tests.rs  sha3_224_nist_long_msg_tests.rs  sha3_256_nist_long_msg_tests.rs  sha3_384_nist_long_msg_tests.rs  sha3_512_nist_long_msg_tests.rs  sha512_224_nist_long_msg_tests.rs  sha512_256_nist_long_msg_tests.rs  sha512_nist_long_msg_tests.rs  shake128_nist_long_msg_tests.rs  shake256_nist_long_msg_tests.rs
wks/ciphers/rs_aes/: Cargo.toml  README.md
wks/ciphers/rs_aes/benches/: benches.rs  implmementations.rs
wks/ciphers/rs_aes/src/: lib.rs
wks/ciphers/rs_cast_128/: Cargo.toml  README.md
wks/ciphers/rs_sm4/: Cargo.toml  README.md
wks/hash_functions/rs_hmac/: Cargo.toml  README.md
wks/hash_functions/rs_hmac/src/: lib.rs
wks/hash_functions/rs_hmac/tests/: hashes_integration.rs  sha1_integration.rs
wks/hash_functions/rs_keccak_nbits/: Cargo.toml  README.md
wks/hash_functions/rs_keccak_nbits/src/: lib.rs  n_bit_keccak_hasher.rs  n_bit_keccak_state.rs  unit_tests.rs
wks/hash_functions/rs_keccak_nbits/src/unit_tests/: mod.rs  use_cases.rs
wks/hash_functions/rs_md2/: Cargo.toml  README.md
wks/hash_functions/rs_md2/src/: lib.rs
wks/hash_functions/rs_sha1/: Benchmark.Dockerfile  Cargo.toml  README.md
wks/hash_functions/rs_sha1/src/: fips_pub_180_1_coverage.rs  lib.rs  sha1comp.rs  sha1hasher.rs  sha1padding.rs  sha1state.rs  sha1words.rs  use_cases.rs
wks/hash_functions/rs_sha1/src/unit_tests/: fips_pub_180_1_coverage.rs  hypothesis_and_coverage_assurance.rs  mod.rs  test_state_trait_impls.rs  use_cases.rs
wks/hash_functions/rs_sha1/tests/: std_tests.rs
wks/hash_functions/rs_sha224/: Cargo.toml  README.md
wks/hash_functions/rs_sha224/src/: lib.rs  sha224comp.rs  sha224hasher.rs  sha224padding.rs  sha224state.rs  sha224words.rs
wks/hash_functions/rs_sha224/src/unit_tests/: use_cases.rs
wks/hash_functions/rs_sha256/: Cargo.toml  README.md
wks/hash_functions/rs_sha256/src/: lib.rs  sha256comp.rs  sha256hasher.rs  sha256padding.rs  sha256state.rs  sha256words.rs  use_cases.rs
wks/hash_functions/rs_sha256/src/unit_tests/: use_cases.rs
wks/hash_functions/rs_sha384/: Cargo.toml  README.md
wks/hash_functions/rs_sha384/src/: lib.rs  sha384comp.rs  sha384hasher.rs  sha384padding.rs  sha384state.rs  sha384words.rs
wks/hash_functions/rs_sha384/src/unit_tests/: use_cases.rs
wks/hash_functions/rs_sha3_224/: Cargo.toml  README.md
wks/hash_functions/rs_sha3_224/src/: lib.rs  sha3_224hasher.rs  sha3_224state.rs  unit_tests.rs
wks/hash_functions/rs_sha3_224/tests/: std_tests.rs
wks/hash_functions/rs_sha3_256/: Cargo.toml  README.md
wks/hash_functions/rs_sha3_256/src/: lib.rs  sha3_256hasher.rs  sha3_256state.rs  unit_tests.rs
wks/hash_functions/rs_sha3_384/: Cargo.toml  README.md
wks/hash_functions/rs_sha3_384/src/: lib.rs  sha3_384hasher.rs  sha3_384state.rs  unit_tests.rs
wks/hash_functions/rs_sha512/: Cargo.toml  README.md
wks/hash_functions/rs_sha512/src/: lib.rs  sha512hasher.rs  sha512state.rs
wks/hash_functions/rs_sha512/src/unit_tests/: use_cases.rs
wks/hash_functions/rs_sha512_224/: Cargo.toml  README.md
wks/hash_functions/rs_sha512_224/src/: lib.rs  sha512_224hasher.rs  sha512_224state.rs
wks/hash_functions/rs_sha512_224/src/unit_tests/: use_cases.rs
wks/hash_functions/rs_sha512_256/: Cargo.toml  README.md
wks/hash_functions/rs_sha512_256/src/: lib.rs  sha512_256hasher.rs  sha512_256state.rs
wks/hash_functions/rs_sha512_256/src/unit_tests/: use_cases.rs
wks/hash_functions/rs_shake128/: Cargo.toml  README.md
wks/hash_functions/rs_shake128/src/: lib.rs  shake128hasher.rs  shake128state.rs  unit_tests.rs
wks/hash_functions/rs_shake256/: Cargo.toml  README.md
wks/hash_functions/rs_shake256/src/: lib.rs  shake256hasher.rs  shake256state.rs  unit_tests.rs
wks/internal_hasher/: Cargo.toml
wks/internal_hasher/src/: block_hasher.rs  byte_pad.rs  constants.rs  digest_through_pad.rs  generic_pad.rs  hash_algorithm.rs  hasher_macro_definition.rs  hasher_ops.rs  hasher_pad_ops.rs  hasher_stating.rs  keccak_u128_size.rs  len_pad.rs  lib.rs  sha1family_pad.rs  u128_size.rs  u32_pad.rs  u64_pad.rs  u64_size.rs
wks/internal_hasher/src/unit_tests/: mod.rs
wks/internal_state/: Cargo.toml
wks/internal_state/src/: bytes_len.rs  d_words.rs  lib.rs
wks/internal_state/src/keccak/: mod.rs  pi.rs  plane.rs  state.rs
wks/internal_state/src/keccak_state/: chi.rs  iota.rs  mod.rs  pi.rs  rho.rs  theta.rs
wks/internal_state/src/n_bit_states/: mod.rs  sha160bits_state.rs  sha256bits_state.rs  sha512bits_state.rs
wks/internal_state/src/rotors/: mod.rs  sha160rotor.rs  sha256rotor.rs  sha512rotor.rs
wks/internal_state/src/unit_tests/: keccak_state.rs  mod.rs
wks/public_key_functions/rs_sm2/: Cargo.toml
wks/public_key_functions/rs_sm2/src/: lib.rs
wks/rs_hasher_ctx/: Cargo.toml  README.md
wks/rs_hasher_ctx/src/: byte_array_wrapper.rs  generic_hasher.rs  lib.rs
wks/rs_internal_hasher/: Cargo.toml
wks/rs_internal_hasher/src/: be_bytes.rs  hash_algorithm.rs  keccak_u128_size.rs  lib.rs  u128_size.rs
wks/rs_sha1/: .gitignore  Benchmark.Dockerfile  Cargo.toml
wks/rs_sha1/src/: fips_pub_180_1_coverage.rs  lib.rs  sha1_hasher.rs  sha1_state.rs  sha1hasher.rs  sha1state.rs  sha1words.rs  test_state_trait_impls.rs  use_cases.rs
wks/rs_sha1/src/lib/: block.rs  fips_pub_180_1_coverage.rs  hypothesis_and_coverage_assurance.rs  mod.rs  sha1_context.rs  sha1_hasher.rs  sha1_state.rs  sha1_words.rs  use_cases.rs
wks/rs_sha1/tests/: std_tests.rs
(+218 files in other folders)
