[package]
name = "rs_ssl"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[workspace]
members = [
    "wks/ciphers/*",
    "wks/rs_hasher_ctx",
    "wks/hash_functions/*",
    "wks/internal_state",
    "wks/internal_hasher",
    "wks/n_bit_words",
    "wks/public_key/*"
]

[workspace.package]
edition = "2021"
license = "GPL-2.0-only"
readme = "README.md"

[[bin]]
name = "rs_ssl_cli"
path = "src/bin/mod.rs"

[[bench]]
name = "benches"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[profile.ci]
inherits = "release"
strip = false
debug = false

[dependencies]
hash_ctx = { path = "wks/rs_hasher_ctx" }

rs_aes = { path = "wks/ciphers/rs_aes" }
rs_blowfish = { path = "wks/ciphers/rs_blowfish" }
rs_camellia = { path = "wks/ciphers/rs_camellia" }
rs_cast_128 = { path = "wks/ciphers/rs_cast_128" }
rs_chacha20 = { path = "wks/ciphers/rs_chacha20" }
rs_des = { path = "wks/ciphers/rs_des" }
rs_gost_28147_89 = { path = "wks/ciphers/rs_gost_28147_89" }
rs_idea = { path = "wks/ciphers/rs_idea" }
rs_poly1305 = { path = "wks/ciphers/rs_poly1305" }
rs_rc2 = { path = "wks/ciphers/rs_rc2" }
rs_rc4 = { path = "wks/ciphers/rs_rc4" }
rs_rc5 = { path = "wks/ciphers/rs_rc5" }
rs_seed = { path = "wks/ciphers/rs_seed" }
rs_sm4 = { path = "wks/ciphers/rs_sm4" }
rs_triple_des = { path = "wks/ciphers/rs_triple_des" }

rs_blake2 = { path = "wks/hash_functions/rs_blake2" }
rs_gost_r34_11_94 = { path = "wks/hash_functions/rs_gost_r34_11_94" }
rs_hmac = { path = "wks/hash_functions/rs_hmac" }
rs_keccak_nbits = { path = "wks/hash_functions/rs_keccak_nbits" }
rs_md2 = { path = "wks/hash_functions/rs_md2" }
rs_md4 = { path = "wks/hash_functions/rs_md4" }
rs_md5 = { path = "wks/hash_functions/rs_md5" }
rs_mdc_2 = { path = "wks/hash_functions/rs_mdc_2" }
rs_ripemd_160 = { path = "wks/hash_functions/rs_ripemd_160" }
rs_sha1 = { path = "wks/hash_functions/rs_sha1" }
rs_sha224 = { path = "wks/hash_functions/rs_sha224" }
rs_sha256 = { path = "wks/hash_functions/rs_sha256" }
rs_sha384 = { path = "wks/hash_functions/rs_sha384" }
rs_sha512 = { path = "wks/hash_functions/rs_sha512" }
rs_sha512_224 = { path = "wks/hash_functions/rs_sha512_224" }
rs_sha512_256 = { path = "wks/hash_functions/rs_sha512_256" }
rs_sha3_224 = { path = "wks/hash_functions/rs_sha3_224" }
rs_sha3_256 = { path = "wks/hash_functions/rs_sha3_256" }
rs_sha3_384 = { path = "wks/hash_functions/rs_sha3_384" }
rs_sha3_512 = { path = "wks/hash_functions/rs_sha3_512" }
rs_shake128 = { path = "wks/hash_functions/rs_shake128" }
rs_shake256 = { path = "wks/hash_functions/rs_shake256" }
rs_sm3 = { path = "wks/hash_functions/rs_sm3" }
rs_whirlpool = { path = "wks/hash_functions/rs_whirlpool" }

rs_diffie_hellman = { path = "wks/public_key/rs_diffie_hellman" }
rs_dsa = { path = "wks/public_key/rs_dsa" }
rs_ed448 = { path = "wks/public_key/rs_ed448" }
rs_ed25519 = { path = "wks/public_key/rs_ed25519" }
rs_elliptic_curve = { path = "wks/public_key/rs_elliptic_curve" }
rs_gost_r34_10_2001 = { path = "wks/public_key/rs_gost_r34_10_2001" }
rs_rsa = { path = "wks/public_key/rs_rsa" }
rs_sm2 = { path = "wks/public_key/rs_sm2" }
rs_x448 = { path = "wks/public_key/rs_x448" }
rs_x25519 = { path = "wks/public_key/rs_x25519" }

[dev-dependencies]
criterion = "0.4.0"
