[package]
name = "internal_hasher"
version = "0.1.0"
description = "A library providing generic abstractions of a hasher adherent type"
edition.workspace = true
license.workspace = true

[dependencies]
internal_state = { path = "../internal_state", version = "0.1.0" }
n_bit_words = { path = "../n_bit_words", version = "0.1.0" }
