[package]
name = "internal_state"
version = "0.1.0"
description = "A library providing generic abstractions of a state representation of a hash process"
edition.workspace = true
license.workspace = true

[lib]
name = "internal_state"

[dependencies]
n_bit_words = { path = "../n_bit_words", version = "0.1.0" }
