[package]
name = "rs_hasher_ctx"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "rs_hasher_ctx_lib"

[dependencies]
internal_hasher = { path = "../internal_hasher", version = "0.1.0" }
internal_state = { path = "../internal_state", version = "0.1.0" }
n_bit_words = { path = "../n_bit_words", version = "0.1.0" }
