[package]
name = "rs_aes"
description = "AES implementation in Rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bench]]
name = "benches"
harness = false

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.0" }
internal_hasher = { path = "../../internal_hasher", version = "0.1.0" }
internal_state = { path = "../../internal_state", version = "0.1.0" }
n_bit_words = { path = "../../n_bit_words", version = "0.1.0" }

[dev-dependencies]
criterion = "0.4.0"
