[package]
name = "rs_aes"
description = """The rs_aes crate is currently a placeholder for an upcoming cryptographic hashing algorithm
implementation in Rust. This algorithm is currently under development and will be released as soon as possible. Please
note that until it is available, the code will be configured to panic by default."""

version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bench]]
name = "benches"
harness = false

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.0" }
internal_hasher = { path = "../../internal_hasher", version = "0.1.0" }
internal_state = { path = "../../internal_state", version = "0.1.0" }
n_bit_words = { path = "../../n_bit_words", version = "0.1.0" }

[dev-dependencies]
criterion = "0.4.0"
