[package]
name = "rs_sm4"
description = "SM4 encryption algorithm implementation in Rust"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
