[package]
name = "rs_hmac"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hash_ctx = { path = "../../hash_ctx" }
internal_hasher = { path = "../../internal_hasher" }
internal_state = { path = "../../internal_state" }

[dev-dependencies]
rs_sha1 = { path = "../rs_sha1" }
rs_sha224 = { path = "../rs_sha224" }
rs_sha256 = { path = "../rs_sha256" }
rs_sha512 = { path = "../rs_sha512" }
