[package]
description = """`rs_hmac` is a Rust implementation of the HMAC (Hash-Based Message Authentication Code) cryptographic
hash algorithm, as part of the larger `rs_ssl` project. This package provides HMAC hashing functionality in a standalone
manner, ideal for when only HMAC is required. Notably, this HMAC implementation is compatible with all hashing functions
within this project, enabling versatile, custom cryptographic solutions. Alternatively, for those seeking a
comprehensive set of cryptographic functions, this same algorithm is included within the broader `rs_ssl` library
bundle. The focus of `rs_hmac`, like the larger project, is on performance, safety, and openness, with a commitment to
ongoing maintenance and enhancement."""
edition.workspace = true
license.workspace = true
name = "rs_hmac"
readme = "./README.md"
repository.workspace = true
version = "0.1.1"

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.*" }
rs_internal_state = { path = "../../rs_internal_state", version = "0.1.*" }
rs_internal_hasher = { path = "../../rs_internal_hasher", version = "0.1.*" }

[dev-dependencies]
rs_sha1 = { path = "../rs_sha1" }
rs_sha224 = { path = "../rs_sha224" }
rs_sha256 = { path = "../rs_sha256" }
rs_sha384 = { path = "../rs_sha384" }
rs_sha512 = { path = "../rs_sha512" }
rs_sha512_224 = { path = "../rs_sha512_224" }
rs_sha512_256 = { path = "../rs_sha512_256" }
rs_sha3_224 = { path = "../rs_sha3_224" }
rs_sha3_256 = { path = "../rs_sha3_256" }
rs_sha3_384 = { path = "../rs_sha3_384" }
rs_sha3_512 = { path = "../rs_sha3_512" }
rs_shake128 = { path = "../rs_shake128" }
rs_shake256 = { path = "../rs_shake256" }
rs_keccak_nbits = { path = "../rs_keccak_nbits" }
