[package]
name = "rs_md2"
description = """The rs_md2 crate is currently a placeholder for an upcoming cryptographic hashing algorithm
implementation in Rust. This algorithm is currently under development and will be released as soon as possible. Please
note that until it is available, the code will be configured to panic by default."""
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
