[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
description = "A git and openssl based implementation SHA-1 library , but faster, easier to port, maintain, expand and use"
categories = ["data-structures", "development-tools"]
keywords = ["sha", "sha_1", "sha-1"]
name = "rs_sha1"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.0" }
internal_hasher = { git = "https://github.com/Azgrom/RustySSL.git/", version = "0.1.0" }
internal_state = { git = "https://github.com/Azgrom/RustySSL.git/", version = "0.1.0" }
n_bit_words = { git = "https://github.com/Azgrom/RustySSL.git/", version = "0.1.0" }
