[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
categories = ["algorithms", "cryptography", "development-tools", "no-std",  "no-std::no-alloc" ]
description = """`rs_sha1` is a Rust implementation of the SHA-1 cryptographic hash algorithm, part of the larger
`rs_shield` project. This package provides SHA-1 hashing functionality in a standalone manner, ideal for when only SHA-1
is required. Alternatively, for those seeking a comprehensive set of cryptographic functions, this same algorithm is
included within the broader `rs_shield` library bundle. The focus of `rs_sha1` and the larger project is on performance,
safety, and openness, with a commitment to ongoing maintenance and enhancement."""
keywords = ["sha", "sha_1", "sha-1"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rs_sha1"
readme = "./README.md"
repository.workspace = true
version = "0.1.3"

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.*" }
rs_internal_state = { path = "../../rs_internal_state", version = "0.1.*" }
rs_internal_hasher = { path = "../../rs_internal_hasher", version = "0.1.*" }
rs_n_bit_words = { path = "../../rs_n_bit_words", version = "0.1.*" }
