[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
keywords = ["sha", "sha_2", "sha_224"]
name = "rs_sha224"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
n_bit_words = { path = "../../n_bit_words" }
internal_state = { path = "../../internal_state" }
hash_ctx = { path = "../../hash_ctx" }
