[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
keywords = ["sha", "sha_2", "sha_224"]
name = "rs_sha224"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hash_ctx = { path = "../../hash_ctx" }
internal_hasher = { path = "../../internal_hasher" }
internal_state = { path = "../../internal_state" }
n_bit_words = { path = "../../n_bit_words" }
