[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
description = "SHA-256"
keywords = ["sha", "sha_2", "sha_256"]
name = "rs_sha256"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
n_bit_words = { path = "../../n_bit_words", version = "0.1.0" }
internal_hasher = { path = "../../internal_hasher", version = "0.1.0" }
internal_state = { path = "../../internal_state", version = "0.1.0" }
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.0" }
