[package]
name = "rs_sha3_256"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx" }
internal_hasher = { path = "../../internal_hasher" }
internal_state = { path = "../../internal_state" }
n_bit_words = { path = "../../n_bit_words" }
