[package]
name = "rs_sha3_384"
description = "SHA3-384"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.0" }
internal_hasher = { path = "../../internal_hasher", version = "0.1.0" }
internal_state = { path = "../../internal_state", version = "0.1.0" }
n_bit_words = { path = "../../n_bit_words", version = "0.1.0" }
