[package]
name = "rs_sha512"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hash_ctx = { path = "../../hash_ctx" }
internal_state = { path = "../../internal_state" }
internal_hasher = { path = "../../internal_hasher" }
n_bit_words = { path = "../../n_bit_words" }
