[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
description = """`rs_shake256` is a Rust implementation of the SHAKE256 cryptographic hash algorithm, part of the larger
`rs_ssl` project. This package provides SHAKE256 hashing functionality in a standalone manner, ideal for when only
SHAKE256 is required. Alternatively, for those seeking a comprehensive set of cryptographic functions, this same
algorithm is included within the broader `rs_ssl` library bundle. The focus of `rs_shake256` and the larger project is
on performance, safety, and openness, with a commitment to ongoing maintenance and enhancement."""
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rs_shake256"
readme = "./README.md"
repository.workspace = true
version = "0.1.1"

[dependencies]
rs_hasher_ctx = { path = "../../rs_hasher_ctx", version = "0.1.0" }
rs_internal_hasher = { path = "../../rs_internal_hasher", version = "0.1.0" }
rs_internal_state = { path = "../../rs_internal_state", version = "0.1.0" }
rs_n_bit_words = { path = "../../rs_n_bit_words", version = "0.1.0" }
