[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
description = """The rs_sm2 crate is currently a placeholder for an upcoming cryptographic hashing algorithm
implementation in Rust. This algorithm is currently under development and will be released as soon as possible. Please
note that until it is available, the code will be configured to panic by default."""
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rs_sm2"
readme = "./README.md"
repository.workspace = true
version = "0.1.2"
